# rzflight

./: .gitattributes  .gitignore  LICENSE  Package.resolved  Package.swift  README-Swift.md  README.md  requirements.txt
euro_aip/: .gitignore  CLAUDE.md  INSTALL.md  Makefile  README.md  pyproject.toml  requirements-pdf.txt  requirements.txt  setup.py  setup_dev.sh  test_airports.db
euro_aip/data/: airfieldmap.csv  q_codes.json
euro_aip/designs/: README.md  builder_api_guide.md  migration_guide.md
euro_aip/euro_aip/: README.md  __init__.py  borders.py
euro_aip/euro_aip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
euro_aip/euro_aip/briefing/: __init__.py
euro_aip/euro_aip/core/: models.py
euro_aip/euro_aip/interp/: __init__.py  base.py  factory.py  interp_custom.py  interp_maintenance.py
euro_aip/euro_aip/models/: __init__.py  aip_entry.py  airport.py  airport_builder.py  airport_collection.py  border_crossing_change.py  border_crossing_entry.py  euro_aip_model.py  euro_aip_model.py.bak  field15.py  fir.py  fir_collection.py  model_transaction.py  navpoint.py  persistence.py  procedure.py  procedure_collection.py  queryable_collection.py  route_resolver.py  runway.py  validation.py  waypoint.py  waypoint_collection.py
euro_aip/euro_aip/parsers/: __init__.py  aip_base.py  aip_default.py  aip_dual.py  aip_ebc.py  aip_egc.py  aip_ekc.py  aip_enc.py  aip_esc.py  aip_factory.py  aip_lec.py  aip_lfc.py  aip_lic.py  aip_lkc.py  aip_loc.py  base.py  bordercrossing.py  default.py  factory.py  lec.py  procedure.py  procedure_default.py  procedure_egc.py  procedure_factory.py  procedure_lfc.py
euro_aip/euro_aip/sources/: README.md  __init__.py  austria_eaip_web.py  autorouter.py  base.py  border_crossing.py  cached.py  database.py  eurocontrol_fra.py  eurocontrol_sdo.py  faa_nasr_fix.py  france_eaip.py  france_eaip_web.py  norway_eaip_web.py  opennav.py  ourairports_navaids.py  point_de_passage.py  slovenia_eaip_web.py  uk_eaip.py  uk_eaip_web.py  vatspy_fir.py  worldairports.py
euro_aip/euro_aip/storage/: __init__.py  base.py  database_storage.py  enrichment_schema.py  enrichment_storage.py  field_definitions.py
euro_aip/euro_aip/utils/: __init__.py  aip_fields.csv  airac_date_calculator.py  airport_name_cleaner.py  autorouter_credentials.py  country_mapper.py  credentials.py  dms_parser.py  field_mapper.py  field_standardization_service.py  fuzzy_matcher.py  geometry.py  runway_classifier.py  solar.py
euro_aip/example/: .gitignore  APPROACH_PACK_README.md  aip.py  aip_fields.xlsx  aipchange.py  aipexport.py  airfieldmap.csv  approach_pack_example.py  border_crossing_source_example.py  bordercrossing_parser_example.py  bordercrossing_parser_test.py  bordercrossingexport.py  csv_border_crossing_example.py  field_extensibility_example.py  foreflight.py  parser_types_example.py  point_de_passage_example.py  requirement.txt  setup_dev.sh  test_duplicate_merging.py  test_nan_handling.py  test_source_names.py  test_std_fields_filtering.py  uk_eaip_example.py  xls_to_rules.py
euro_aip/mcp_server/: .env  README.md  main.py  mcp-flyfun.json  requirements.txt  rules.json  test_mcp_functionality.py
euro_aip/tests/: conftest.py  test_borders.py  test_builder_api.py  test_queryable_collections.py
euro_aip/tests/assets/: expected_fields_map.json  expected_fields_validation.json  expected_results.py  test_field_standardization_data.json  (+1 more)
euro_aip/web/: README.md  requirements.txt  start_server.py
(+214 files in other folders)
