[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euro_aip"
version = "0.1.0"
description = "A library for parsing and managing European AIP (Aeronautical Information Publication) data"
readme = "README.md"
authors = [
    {name = "Brice Rosenzweig", email = "brice@rosenzweig.io"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "pandas>=1.2.0",
    "camelot-py>=1.0.0",
    "sqlalchemy>=1.4.0",
    "python-dateutil>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "mypy>=0.900",
    "flake8>=3.9.0",
]

[tool.setuptools]
packages = ["euro_aip"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short" 