[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euro_aip"
version = "0.1.0"
description = "A library for parsing and managing European AIP (Aeronautical Information Publication) data"
readme = "README.md"
authors = [
    {name = "Brice Rosenzweig", email = "brice@rosenzweig.io"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.25.1",
    "pandas>=1.2.0",
    "sqlalchemy>=1.4.0",
    "simplekml>=1.3.0",
    "openpyxl>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "tabulate>=0.9.0",
    "numpy>=2.2.5",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "pydantic>=2.11.7",
    "langchain>=1.0.3",
    "langchain_mcp_adapters>=0.1.12",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "mypy>=0.900",
    "flake8>=3.9.0",
]

pdf = [
    "camelot-py>=1.0.0",
    "pdfplumber>=0.7.0",
    "pdfminer>=20191125",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"euro_aip.utils" = ["aip_fields.csv"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -s --log-cli-level=INFO"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.deptry.per_rule_ignores]
DEP001 = ["security_config","api","chat"]
DEP002 = ["pytest","black","mypy","flake8"]